[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/npcObjects/100000/100000.gd" type="Script" id=1]
[ext_resource path="res://assets/npcSprites/100000/100000.png" type="Texture" id=2]
[ext_resource path="res://scenes/userInerface/NPCChatBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/npcObjects/QuestBubble.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "anim"
loop = true
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.78, 0.84, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.78, 0.84, 0.9, 0.96, 1.02 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 31, 31 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.625, 57.75 )

[node name="100000" type="Sprite"]
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )
flip_h = true
hframes = 16
frame = 8
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "anim"
reset_on_save = false
playback_speed = 0.7
anims/RESET = SubResource( 1 )
anims/anim = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -5 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = -27.0
margin_top = 56.0
margin_right = 29.0
margin_bottom = 70.0
align = 1
valign = 1

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="ChatBox" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -56.0
margin_top = -112.0
margin_right = 54.0
margin_bottom = -78.0

[node name="QuestBubble" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -42, -53 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_DialogTimer_timeout"]
[connection signal="input_event" from="QuestBubble/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="QuestBubble/Area2D" to="." method="_on_Area2D_mouse_entered"]

[editable path="QuestBubble"]
